Cache selected Android logs before parsing